# ugc-renderer-lab

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/gltf/sample_scene/: sample_scene.gltf
assets/gltf/sample_triangle/: sample_triangle.gltf
engine/: CMakeLists.txt
engine/include/ugc_renderer/app/: application.h  runtime_render_settings_persistence.h
engine/include/ugc_renderer/asset/: gltf_document.h  gltf_loader.h  gltf_mesh_builder.h  gltf_scene_builder.h  json_parser.h  json_value.h
engine/include/ugc_renderer/core/: logger.h  throw_if_failed.h
engine/include/ugc_renderer/platform/: runtime_control_panel.h  window.h
engine/include/ugc_renderer/render/: camera.h  constant_buffer.h  d3d12_renderer.h  descriptor_allocator.h  gpu_buffer.h  gpu_debug_marker.h  image_loader.h  material.h  material_manager.h  mesh.h  render_graph.h  render_graph_profile.h  render_item.h  runtime_render_settings.h  shader_compiler.h  texture2d.h  texture_manager.h
engine/shaders/: bloom.hlsl  post_process.hlsl  shadow_depth.hlsl  skybox.hlsl  triangle.hlsl
engine/src/app/: application.cpp  runtime_render_settings_persistence.cpp
engine/src/asset/: gltf_loader.cpp  gltf_mesh_builder.cpp  gltf_scene_builder.cpp  json_parser.cpp
engine/src/core/: logger.cpp
engine/src/platform/: runtime_control_panel.cpp  window.cpp
engine/src/render/: constant_buffer.cpp  d3d12_renderer.cpp  descriptor_allocator.cpp  gpu_buffer.cpp  gpu_debug_marker.cpp  image_loader.cpp  material_manager.cpp  mesh.cpp  render_graph.cpp  shader_compiler.cpp  texture2d.cpp  texture_manager.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
scripts/: generate_sample_textures.ps1
tools/: CMakeLists.txt
tools/src/: gltf_probe.cpp
